Fix window size and logo alignment.

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -11,8 +11,7 @@ html {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  height: 100%;
+  height: 100vh;
 }
 .instructions {
   max-width: 500px;
